getting-started-with-istio-service-mesh/ch04/configs/webservice-and-or-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-httplookup-vs
spec:
  hosts:
    - webservice
  http:
  - match: # 첫번째로 선언된 일치 조건을 먼저 평가하기 때문에 항상 구체적인 규칙을 먼저 선언해야 한다.
    - headers:
        x-upgrade:
          exact: "TRUE"
    - queryParams:
        ver:
          exact: v1
      method:
        exact: GET
    route:
    - destination:
        host: webservice
        subset: v1
  - route :
    - destination:
        host: webservice
        subset: v0
